first working version of the repl

--- a/src/notebooks/expression.ipynb
+++ b/src/notebooks/expression.ipynb
@@ -2,17 +2,19 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
     "from abc import ABC, abstractmethod\n",
-    "from numbers import Number"
+    "from dataclasses import dataclass\n",
+    "from numbers import Number\n",
+    "from typing import LiteralString, Generic, TypeVar"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,37 +26,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "class Scalar(Expression):\n",
+    "T = TypeVar(\"T\", bound=object)\n",
+    "\n",
+    "\n",
+    "@dataclass(repr=False, eq=True, frozen=True)\n",
+    "class Scalar(Expression, Generic[T]):\n",
+    "    value: T\n",
+    "\n",
     "    def __str__(self) -> str:\n",
-    "        return str(self._buf)\n",
+    "        return str(self.value)\n",
     "\n",
     "    def __repr__(self) -> str:\n",
     "        return str(self)\n",
     "\n",
-    "\n",
-    "class Boolean(Scalar):\n",
-    "    def __init__(self, val: bool) -> None:\n",
-    "        self._buf = val\n",
-    "\n",
-    "    def eval(self) -> bool:\n",
-    "        return self._buf\n",
+    "    def eval(self) -> T:\n",
+    "        return self.value\n",
     "\n",
     "\n",
-    "class Constant(Scalar):\n",
-    "    def __init__(self, val: int | float) -> None:\n",
-    "        self._buf = val\n",
+    "class Boolean(Scalar[bool]):\n",
+    "    pass\n",
     "\n",
-    "    def eval(self) -> int | float:\n",
-    "        return self._buf"
+    "\n",
+    "class Constant(Scalar[int | float]):\n",
+    "    pass"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -79,7 +82,7 @@
     "        super().__init__(lhs, rhs)\n",
     "\n",
     "    @staticmethod\n",
-    "    def operator_symbol() -> str:\n",
+    "    def operator_symbol() -> LiteralString:\n",
     "        return \"+\"\n",
     "\n",
     "    def eval(self) -> Number:\n",
@@ -94,7 +97,7 @@
     "        super().__init__(lhs, rhs)\n",
     "\n",
     "    @staticmethod\n",
-    "    def operator_symbol() -> str:\n",
+    "    def operator_symbol() -> LiteralString:\n",
     "        return \"<\"\n",
     "\n",
     "    def eval(self) -> Boolean:\n",
@@ -106,17 +109,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
-    "EvaluatesToBool = Boolean | LT\n",
+    "EvaluatesToBool = Boolean | LT | Constant\n",
     "\n",
     "\n",
     "class TernaryOperator(Expression):\n",
-    "    def __init__(\n",
-    "        self, fst: Expression | LT, scnd: Expression, thrd: Expression\n",
-    "    ) -> None:\n",
+    "    def __init__(self, fst: Expression, scnd: Expression, thrd: Expression) -> None:\n",
     "        self.fst = fst\n",
     "        self.scnd = scnd\n",
     "        self.thrd = thrd\n",
@@ -125,59 +126,39 @@
     "    def operator_symbol() -> str:\n",
     "        pass\n",
     "\n",
+    "    def __repr__(self) -> str:\n",
+    "        return f\"({self.operator_symbol()} {self.fst} {self.scnd} {self.thrd})\"\n",
     "\n",
-    "class IfThenElse(BinaryOperator):\n",
-    "    pass"
+    "    def __str__(self) -> str:  # called for print\n",
+    "        return self.__repr__()\n",
+    "\n",
+    "\n",
+    "class IfThenElse(TernaryOperator):\n",
+    "    def __init__(\n",
+    "        self, fst: EvaluatesToBool, scnd: Expression, thrd: Expression\n",
+    "    ) -> None:\n",
+    "        super().__init__(fst, scnd, thrd)\n",
+    "\n",
+    "    @staticmethod\n",
+    "    def operator_symbol() -> LiteralString:\n",
+    "        return \"IfThenElse\"\n",
+    "\n",
+    "    def __str__(self) -> str:\n",
+    "        return f\"(IF {self.fst} THEN {self.scnd} ELSE {self.thrd})\"\n",
+    "\n",
+    "    def eval(self) -> Number:\n",
+    "        if self.fst.eval():\n",
+    "            return self.scnd.eval()\n",
+    "        else:\n",
+    "            return self.thrd.eval()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "(2 + 4)\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "((2 + 4))"
-      ]
-     },
-     "execution_count": 37,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "add = Addition(Constant(2), Constant(4))\n",
-    "print(add)\n",
-    "add"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 46,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "False"
-      ]
-     },
-     "execution_count": 46,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "LT(add, Constant(6)).eval().eval()"
-   ]
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
